--- a/FinalProjectVR/Areas/Admin/Views/About/UpdateAbout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/About/UpdateAbout.cshtml
@@ -12,17 +12,17 @@
         <form asp-action="UpdateAbout">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Misson" class="control-label">Misson</label>
+                <label asp-for="Misson" class="control-label">Misyamız</label>
                 <textarea asp-for="Misson" class="form-control"></textarea>
                 <span asp-validation-for="Misson" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Vision" class="control-label">Vision</label>
+                <label asp-for="Vision" class="control-label">Vizyonumuz</label>
                 <textarea asp-for="Vision" class="form-control"></textarea>
                 <span asp-validation-for="Vision" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="History" class="control-label">History</label>
+                <label asp-for="History" class="control-label">Tariximiz</label>
                 <textarea asp-for="History" class="form-control"></textarea>
                 <span asp-validation-for="History" class="text-danger"></span>
             </div>
