--- a/FinalProjectVR/Areas/Admin/Views/Blog/DetailBlog.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Blog/DetailBlog.cshtml
@@ -8,7 +8,7 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-12 text-center">
-            <h1 class="display-4">Blog Detail</h1>
+            <h1 class="display-4">Blogunuz</h1>
             <hr class="my-4" />
         </div>
     </div>
@@ -31,7 +31,7 @@
         <div class="col-md-8 offset-md-2">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
-                    <h2 class="mb-0">Comments</h2>
+                    <h2 class="mb-0">Commentəriniz</h2>
                 </div>
                 <div class="card-body">
                     @await Component.InvokeAsync("CommentListAdmin", new { id = ViewBag.i })
