--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
@@ -40,17 +40,12 @@
                                 <td>@item.Message</td>
                                 <td><img src="@item.ImageUrl" style="width:100px; height:100px" alt="Image"/></td>
                                 <td>
-                                    @if (item.Delete == 0)
-                                    {
-                                        <span class="badge badge-success">Active</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge badge-warning">Inactive</span>
-                                    }
+                                    <span class="badge @(item.Delete == 0 ? "badge-success" : "badge-warning")">
+                                        @(item.Delete == 0 ? "Aktiv" : "Passiv")
+                                    </span>
                                 </td>
                                 <td>
-                                    <a href="~/Admin/Testimonial/UpdateTestimonial/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a asp-action="Testimonial" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
                                     <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
                                         <i class="fas fa-trash"></i>
                                     </a>
