--- a/FinalProjectVR/Areas/Admin/Views/About/AddAbout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/About/AddAbout.cshtml
@@ -13,17 +13,17 @@
         <form asp-action="AddAbout" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Misson" class="control-label">Ad</label>
+                <label asp-for="Misson" class="control-label">Misson</label>
                 <input asp-for="Misson" class="form-control" />
                 <span asp-validation-for="Misson" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Vision" class="control-label">Soyad</label>
+                <label asp-for="Vision" class="control-label">Vizyonumuz</label>
                 <input asp-for="Vision" class="form-control" />
                 <span asp-validation-for="Vision" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="History" class="control-label">Position</label>
+                <label asp-for="History" class="control-label">Tariximiz</label>
                 <input asp-for="History" class="form-control" />
                 <span asp-validation-for="History" class="text-danger"></span>
             </div>
