--- a/FinalProjectVR/Areas/Admin/Views/Blog/AddBlog.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Blog/AddBlog.cshtml
@@ -6,7 +6,7 @@
         <form asp-action="AddBlog" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label">Text</label>
+                <label asp-for="Title" class="control-label">Başlıq</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
