--- a/FinalProjectVR/Areas/Admin/Views/Blog/UpdateBlog.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Blog/UpdateBlog.cshtml
@@ -12,7 +12,7 @@
             <input type="hidden" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label">Title</label>
+                <label asp-for="Title" class="control-label">Başlıq</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
