--- a/FinalProjectVR/Areas/Admin/Views/ContactUs/UpdateContactUs.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/ContactUs/UpdateContactUs.cshtml
@@ -27,12 +27,12 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label">Qeydiyyat Nişanı</label>
+                <label asp-for="Subject" class="control-label">Başlıq</label>
                 <input asp-for="Subject" class="form-control" id="answer" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Message" class="control-label">Qeydiyyat Nişanı</label>
+                <label asp-for="Message" class="control-label">Mesaj</label>
                 <input asp-for="Message" class="form-control" id="answer" />
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
