--- a/FinalProjectVR/Areas/Admin/Views/Order/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Order/Index.cshtml
@@ -34,17 +34,12 @@
                                 <td>@item.Pricing.Title</td>
                                 <td>@item.Deadline.ToString("dd/MM/yyyy")</td>
                                 <td>
-                                    @if (item.Delete == 0)
-                                    {
-                                        <span class="badge badge-success">Aktiv</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge badge-warning">Passiv</span>
-                                    }
+                                    <span class="badge @(item.Delete == 0 ? "badge-success" : "badge-warning")">
+                                        @(item.Delete == 0 ? "Aktiv" : "Passiv")
+                                    </span>
                                 </td>
                                 <td>
-                                    <a href="~/Admin/Order/UpdateOrder/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a asp-action="UpdateOrder" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
                                     <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
                                         <i class="fas fa-trash"></i>
                                     </a>
