--- a/FinalProjectVR/Areas/Admin/Views/Shared/Components/Statistics/Default.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/Components/Statistics/Default.cshtml
@@ -1,64 +1,57 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
 <div class="row">
-
-    <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-primary shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            Aktiv Abonələrimizin Sayı
+    @for (int i = 0; i < 4; i++)
+    {
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            @if (i == 0)
+                            {
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                    Aktiv Abonələrimizin Sayı
+                                </div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.ordercount</div>
+                            }
+                            else if (i == 1)
+                            {
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    Aktiv Blog Sayı
+                                </div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.blogcount</div>
+                            }
+                            else if (i == 2)
+                            {
+                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                    Aktiv Komanda Üzvlərin Sayı
+                                </div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.teamcount</div>
+                            }
+                            else
+                            {
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                    Aktiv Email Sayı
+                                </div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.emailcount</div>
+                            }
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.ordercount</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="as fa-fw fa-shopping-cart fa-2x text-gray-300"></i>
+                        <div class="col-auto">
+                            @if (i == 3)
+                            {
+                                <i class="as fa-fw fa-shopping-cart fa-2x text-gray-300"></i>
+                            }
+                            else
+                            {
+                                <i class="fas fa-fw fa-@(i == 1 ? "blog" : "users") fa-2x text-gray-300"></i>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-success shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                             Aktiv Blog Sayı
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.blogcount</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fas fa-fw fa-blog fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Pending Requests Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-warning shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                            Aktiv Komanda Üzvlərin Sayı
-                        </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.teamcount</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fas fa-fw fa-users fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    }
 </div>
