--- a/FinalProjectVR/Areas/Admin/Views/Pricing/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Pricing/Index.cshtml
@@ -42,7 +42,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <a asp-action="Pricing" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a asp-action="UpdatePricing" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
                                     <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Title">
                                         <i class="fas fa-trash"></i>
                                     </a>
