Fluent Validation finished

--- a/FinalProjectVR/Areas/Admin/Views/PriceDescription/UpdatePDescription.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/PriceDescription/UpdatePDescription.cshtml
@@ -1,24 +1,25 @@
-﻿@model PricingDescriptionCreateDTOs
-
+﻿@model PriceDescriptionDTOs
 @{
-    ViewData["Title"] = "AddPDescription";
+    ViewData["Title"] = "UpdatePDescription";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>AddPDescription</h1>
+<h1>Qiymet Acıqlamları</h1>
+
 
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddPDescription" method="post">
+        <form asp-action="UpdatePDescription">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label">Ad</label>
+                <label asp-for="Description" class="control-label">Misyamız</label>
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+
                 <label asp-for="PricingId" class="control-label">Kateqoriya</label>
                 <select asp-for="PricingId" class="form-control">
                     @if (ViewData["PriceDescription"] is IEnumerable<PricingDTOs> priceDescriptions)
@@ -31,7 +32,9 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="@DefaultConstantValue.ADD_MESSAGE" class="btn btn-primary" />
+                <input type="submit" value="@DefaultConstantValue.Update_MESSAGE" class="btn btn-primary" />
+            </div>
+            <div class="form-group">
             </div>
         </form>
     </div>
@@ -40,5 +43,4 @@
 <div>
     <a asp-action="Index">@DefaultConstantValue.RETURN_TO_BACK</a>
 </div>
-
 
