--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -291,4 +291,5 @@
     <script src="~/web-cras-three.vercel.app/assets/js/plugins/swiper.min.js"></script>
     <script src="~/web-cras-three.vercel.app/assets/js/plugins/SplitText.min.js"></script>
     <script src="~/web-cras-three.vercel.app/assets/js/main.js"></script>
+    @RenderSection("Scripts", false)
 </body>
