--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -9,5 +9,6 @@
 @using DTOLayer.TestimonialDTO
 @using DTOLayer.BlogDTO
 @using DTOLayer.MembershipDTO
+@using DTOLayer.OrderDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
