--- a/FinalProjectVR/Areas/Admin/Views/Service/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Service/Index.cshtml
@@ -46,7 +46,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <a  asp-action="ServiceUpdate" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a asp-action="UpdateService" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
                                     <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Title">
                                         <i class="fas fa-trash"></i>
                                     </a>
