--- a/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeamDTOs
+﻿@model TeamCreateDTOs
 
 
 
@@ -21,11 +21,6 @@
                 <label asp-for="Position" class="control-label">Position</label>
                 <input asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label">Image URL</label>
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LinkedInUrl" class="control-label">LinkedIn URL</label>
