--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
@@ -45,7 +45,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <a asp-action="Testimonial" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+                                    <a asp-action="UpdateTestimonial" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
                                     <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
                                         <i class="fas fa-trash"></i>
                                     </a>
