--- a/FinalProjectVR/Views/ContactUs/Index.cshtml
+++ b/FinalProjectVR/Views/ContactUs/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model DTOLayer.ContactUs.ContactUsCreateDTOs
+
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!--Start form-->
+
 <div class="ak-height-125 ak-height-lg-80"></div>
 <div class="container">
     <div class="contact-content">
@@ -14,36 +16,39 @@
         <div class="contact-form" data-aos="fade-up" data-aos-delay="750">
             <div>
                 <h5 class="mb-3">Sizə Necə Kömək Edə bilərik?</h5>
-                <p>
-                    İsmarıcınızı Bizə Yazın Ən kısa Zamanda Sizə Geri Dönüləcək
-                </p>
+                <p>İsmarıcınızı Bizə Yazın Ən kısa Zamanda Sizə Geri Dönüləcək</p>
                 <div class="ak-height-45 ak-height-lg-30"></div>
             </div>
-            <form asp-controller="ContactUs" asp-action="Index" method="post" >
-                <div class="from-inputs ">
+            <form asp-controller="ContactUs" asp-action="Index" method="post">
+                <div class="from-inputs">
                     <div class="type_1">
-                        <label for="name" class="form-label">Ad</label>
-                        <input type="text" name="Name" id="Name">
+                        <label for="Name" class="form-label">Ad</label>
+                        <input type="text" asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="type_1">
-                        <label for="suraname" class="form-label">Soyad</label>
-                        <input type="text" name="Surname" id="suranameid">
+                        <label for="Surname" class="form-label">Soyad</label>
+                        <input type="text" asp-for="Surname" class="form-control" />
+                        <span asp-validation-for="Surname" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="from-inputs ">
+                <div class="from-inputs">
                     <div class="type_1">
-                        <label for="mail" class="form-label">Email</label>
-                        <input type="text" name="Email" id="emailid">
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="text" asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="type_1">
                         <label for="Subject" class="form-label">Başlıq</label>
-                        <input type="text" name="Subject" id="Subject">
+                        <input type="text" asp-for="Subject" class="form-control" />
+                        <span asp-validation-for="Subject" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="from-textarea">
                     <div class="type_1">
-                        <label for="textareaInput" class="form-label">Sizin Mesajınız</label>
-                        <textarea name="Message" rows="5" id="textareaInput"></textarea>
+                        <label for="Message" class="form-label">Sizin Mesajınız</label>
+                        <textarea asp-for="Message" class="form-control"></textarea>
+                        <span asp-validation-for="Message" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="ak-height-40 ak-height-lg-20"></div>
@@ -52,8 +57,6 @@
         </div>
     </div>
 </div>
-<!--End form -->
-
 <div class="ak-height-125 ak-height-lg-80"></div>
 @Html.Partial("_ContactPartialView")
 
